--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.12.0+2
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +38,9 @@ dev_dependencies:
   google_fonts: ^1.1.0
   supercharged: ^2.0.0
   get: ^3.4.6
+  intl: ^0.17.0
+  material_design_icons_flutter: ^4.0.5755
+  image_picker: ^0.6.7+22
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
